# netrosophic

./: setup.cfg  t.py
oper/: __init__.py  algebra.py  arithmetic.py
oper/context/: calculator.py  types.py
oper/context/tests/: __init__.py  test_algebra.py  test_arithmetic.py  test_context.py
