[metadata]
name = neutrosophic
version = 1.0.0
author = Your Name
author_email = your_email@example.com
description = A library for performing operations on neutrosophic numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/neutrosophic
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
